style: fix header width, footer wrap and center body

--- a/themes/inhabitent/sass/base/_reset.scss
+++ b/themes/inhabitent/sass/base/_reset.scss
@@ -46,3 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+body {
+	max-width: 1120px;
+}
