--- a/themes/inhabitent/sass/layout/_footer.scss
+++ b/themes/inhabitent/sass/layout/_footer.scss
@@ -7,6 +7,7 @@ footer {
 
 .footer-content-wrapper{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 47px;
     line-height: 2.5rem;
