--- a/themes/inhabitent/sass/layout/_grid.scss
+++ b/themes/inhabitent/sass/layout/_grid.scss
@@ -1,4 +1,5 @@
 body {
     max-width: 1120px;
+    margin: 0 auto;
     line-height: 1.75;
 }
